- Updated login page - Fixed padding on some search fields and buttons - Fixed colors on menu and theme buttons - Fixed dark mode on login page - Fixed checkbox background color
v0.2.1-alpha

--- a/stylesheets/components/checkbox.css
+++ b/stylesheets/components/checkbox.css
@@ -17,7 +17,7 @@ input[type=checkbox] {
     border: 2px solid #777 !important;
     box-shadow: none !important;
     border-radius: 3px !important;
-    background-color: transparent;
+    background-color: transparent !important;
     -webkit-transition: all 0.5s;
     transition: all 0.5s !important;
 }
